Renamed app_logging.py to logging.py

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -28,6 +28,14 @@
     [0.1.0] - yyyy-mm-dd
 
 
+[0.1.1] - 2025-08-20
+====================
+
+**Changed**
+
+  - Renamed 'app_logging.py' to 'logging.py'
+
+
 
 [0.1.0] - 2025-03-16
 ====================
